--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 	dmdkll
-	<script src="basic.js"></script>
+
+
+	<!-- <script src="1basic.js"></script> -->
+	<script src="2-url-request.js"></script>
+
 </body>
 </html>
